--- a/Testdata.yml
+++ b/Testdata.yml
@@ -5,10 +5,38 @@ data:
     Name: 0-1
   192.168.1.128/25:
     Name: 0-2
+  192.168.1.64/28:
+    Name: ''
+    Who: ''
+    what: ''
+    when: ''
+    where: ''
+  192.168.1.8/29:
+    Name: 29-1
 fields:
   Name:
     colorMap:
       .*: green
     colorWeight: 1
     controlType: lineEdit
-    show: 'True'
+    show: true
+  Who:
+    colorMap: {}
+    colorWeight: 1
+    controlType: lineEdit
+    show: false
+  what:
+    colorMap: {}
+    colorWeight: 1
+    controlType: lineEdit
+    show: false
+  when:
+    colorMap: {}
+    colorWeight: 1
+    controlType: lineEdit
+    show: false
+  where:
+    colorMap: {}
+    colorWeight: 1
+    controlType: lineEdit
+    show: false
